init change to use iperf3