@@ -1,10 +1,10 @@
 /**
  * - 02/2008: Class created by Nicolas Richasse
- * 
+ *
  * Changelog:
  * 	- class created
  * 	- iperf line parsing fixed and improved
- * 
+ *
  * To do:
  * 	- ...
  *
@@ -52,7 +52,7 @@ public class IperfThread extends Thread
 			frame.setStartedStatus();
 
 			process = Runtime.getRuntime().exec(command);
-			
+
 			// read in the output from Iperf
 			input = new BufferedReader(new InputStreamReader(process.getInputStream()));
 			errors = new BufferedReader(new InputStreamReader(process.getErrorStream()));
@@ -82,10 +82,10 @@ public class IperfThread extends Thread
 			quit();
 		}
 	}
-	
+
 	private Object waitWindowMutex = new Object();
 	private JPerfWaitWindow waitWindow;
-	
+
 	public synchronized void quit()
 	{
 		SwingUtilities.invokeLater(new Runnable()
@@ -109,7 +109,7 @@ public class IperfThread extends Thread
 						public void run()
 						{
 							process.destroy();
-							
+
 							if (!isServerMode)
 							{
 								try
@@ -120,7 +120,7 @@ public class IperfThread extends Thread
 								{
 									// nothing
 								}
-				
+
 								try
 								{
 									process.getOutputStream().close();
@@ -129,7 +129,7 @@ public class IperfThread extends Thread
 								{
 									// nothing
 								}
-				
+
 								try
 								{
 									process.getErrorStream().close();
@@ -138,7 +138,7 @@ public class IperfThread extends Thread
 								{
 									// nothing
 								}
-								
+
 								if (input != null)
 								{
 									try
@@ -154,7 +154,7 @@ public class IperfThread extends Thread
 										input = null;
 									}
 								}
-				
+
 								if (errors != null)
 								{
 									try
@@ -171,7 +171,7 @@ public class IperfThread extends Thread
 									}
 								}
 							}
-							
+
 							try
 							{
 								process.waitFor();
@@ -180,9 +180,9 @@ public class IperfThread extends Thread
 							{
 								// nothing
 							}
-				
+
 							process = null;
-							
+
 							synchronized(waitWindowMutex)
 							{
 								waitWindow.setVisible(false);
@@ -203,15 +203,29 @@ public class IperfThread extends Thread
 	public void parseLine(String line)
 	{
 		// only want the actual output lines
-		if (line.matches("\\[[ \\d]+\\]\\s*[\\d]+.*"))
+		// TODO: --bidir
+/*
+[  5][TX-C]   9.00-10.00  sec  36.2 MBytes   304 Mbits/sec    0   3.02 MBytes
+[  7][RX-C]   9.00-10.00  sec  6.87 MBytes  57.6 Mbits/sec
+- - - - - - - - - - - - - - - - - - - - - - - - -
+[ ID][Role] Interval           Transfer     Bitrate         Retr
+[  5][TX-C]   0.00-10.00  sec   350 MBytes   294 Mbits/sec    0             sender
+[  5][TX-C]   0.00-10.05  sec   354 MBytes   295 Mbits/sec                  receiver
+[  7][RX-C]   0.00-10.00  sec  92.5 MBytes  77.6 Mbits/sec    0             sender
+[  7][RX-C]   0.00-10.05  sec  91.6 MBytes  76.4 Mbits/sec                  receiver
+*/
+		if (line.matches("\\[[ \\d]+\\]\\s*[\\d]+.*"))  //TCP
 		{
 			Pattern p = Pattern.compile("[-\\[\\]\\s]+");
 			// ok now break up the line into id#, interval, amount transfered, format
 			// transferred, bandwidth, and format of bandwidth
 			String[] results = p.split(line);
-
+			//TCP
+			//          id      start    end                  Transfer                  Bitrate                         Retr  Cwnd
+			//{ "", "5", "0.00", "1.00", "sec", "11.2", "MBytes", "93.9", "Mbits/sec", "251", "13.4", "KBytes" }
 			// get the ID # for the stream
-			Integer temp = new Integer(results[1].trim());
+			//Integer temp = new Integer(results[1].trim());
+			Integer temp = Integer.valueOf(results[1].trim());
 			int id = temp.intValue();
 
 			boolean found = false;
@@ -231,30 +245,96 @@ public class IperfThread extends Thread
 				finalResults.add(streamResult);
 			}
 			// this is TCP or Client UDP
-			if (results.length == 9)
+			//~ System.out.printf("TCP=>> %d\n", results.length);
+			if (results.length == 14)
 			{
-				Double start = new Double(results[2].trim());
-				Double end = new Double(results[3].trim());
-				Double bw = new Double(results[7].trim());
-				
-				Measurement M = new Measurement(start.doubleValue(), end.doubleValue(), bw.doubleValue(), results[8]);
-				streamResult.addBW(M);
-				frame.addNewStreamBandwidthMeasurement(id, M);
-			}
-			else if (results.length == 14)
-			{
-				Double start = new Double(results[2].trim());
-				Double end = new Double(results[3].trim());
-				Double bw = new Double(results[7].trim());
+				//Double start = new Double(results[2].trim());
+				//Double end = new Double(results[3].trim());
+				//Double bw = new Double(results[7].trim());
+				Double start = Double.valueOf(results[2].trim());
+				Double end = Double.valueOf(results[3].trim());
+				Double bw = Double.valueOf(results[7].trim());
 
 				Measurement B = new Measurement(start.doubleValue(), end.doubleValue(), bw.doubleValue(), results[7]);
 				streamResult.addBW(B);
 
-				Double jitter = new Double(results[9].trim());
+				//Double jitter = new Double(results[9].trim());
+				Double jitter = Double.valueOf(results[9].trim());
 				Measurement J = new Measurement(start.doubleValue(), end.doubleValue(), jitter.doubleValue(), results[10]);
 				streamResult.addJitter(J);
 				frame.addNewStreamBandwidthAndJitterMeasurement(id, B, J);
 			}
+			else  if (results.length >= 9)
+			{
+				//Double start = new Double(results[2].trim());
+				//Double end = new Double(results[3].trim());
+				//Double bw = new Double(results[7].trim());
+				Double start = Double.valueOf(results[2].trim());
+				Double end = Double.valueOf(results[3].trim());
+				Double bw = Double.valueOf(results[7].trim());
+
+				Measurement M = new Measurement(start.doubleValue(), end.doubleValue(), bw.doubleValue(), results[8]);
+				streamResult.addBW(M);
+				frame.addNewStreamBandwidthMeasurement(id, M);
+			}
+
 		}
+		else if (line.matches(".*\\[[ \\d]+\\]\\s*[\\d]+.*"))  //UDP
+		{
+			//~ System.out.printf("UDP: %s\n", line);
+			Pattern p = Pattern.compile("[-\\[\\]\\s]+");
+			// ok now break up the line into id#, interval, amount transfered, format
+			// transferred, bandwidth, and format of bandwidth
+			String[] results = p.split(line);
+
+			// get the ID # for the stream
+			//Integer temp = new Integer(results[1].trim());
+			Integer temp = Integer.valueOf(results[1].trim());
+			int id = temp.intValue();
+
+			boolean found = false;
+			JperfStreamResult streamResult = new JperfStreamResult(id);
+			for (int i = 0; i < finalResults.size(); ++i)
+			{
+				if ((finalResults.elementAt(i)).getID() == id)
+				{
+					streamResult = finalResults.elementAt(i);
+					found = true;
+					break;
+				}
+			}
+
+			if (!found)
+			{
+				finalResults.add(streamResult);
+			}
+			// this is TCP or Client UDP
+			//~ System.out.printf("UDP=>> %d\n", results.length);
+			if (results.length == 14)
+			{
+				Double start = Double.valueOf(results[2].trim());
+				Double end = Double.valueOf(results[3].trim());
+				Double bw = Double.valueOf(results[7].trim());
+
+				Measurement B = new Measurement(start.doubleValue(), end.doubleValue(), bw.doubleValue(), results[7]);
+				streamResult.addBW(B);
+				frame.addNewStreamBandwidthMeasurement(id, B);
+
+				Double jitter = Double.valueOf(results[9].trim());
+				Measurement J = new Measurement(start.doubleValue(), end.doubleValue(), jitter.doubleValue(), results[10]);
+				streamResult.addJitter(J);
+				frame.addNewStreamBandwidthAndJitterMeasurement(id, B, J);
+			} else if (results.length >= 10)
+			{
+				Double start = Double.valueOf(results[2].trim());
+				Double end = Double.valueOf(results[3].trim());
+				Double bw = Double.valueOf(results[7].trim());
+
+				Measurement B = new Measurement(start.doubleValue(), end.doubleValue(), bw.doubleValue(), results[7]);
+				streamResult.addBW(B);
+				frame.addNewStreamBandwidthMeasurement(id, B);
+			}
+		}
+
 	}
 }
